--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>ola</h1>
-    <p>sou o Eduardo.</p>
+   <section>
+<div class="container">
+    <div class="notifica"> <h1 class="item">notifications</h1> <input class="item1"   type="button" value="3"> 
+        <p class="epe1">
+            Mark all as read
+        </p>
+    </div>
+
+<div class="imagens1"><img class="imgdoedu" src="avatar-mark-webber.webp" alt="">
+<h1 class="titulodasimagens2">Mark Webber</h1>
+<p class="txtdasimg">reacted to your recent post <b>My first tournament today!</b></p> <button class="laranja"></button> <p class="minute3">3m ago</p>
+</div>
+<div class="imagens1"> <img class="imgdoedu" src="avatar-angela-gray.webp" alt=""> <h1 class="titulodasimagens1">Angela Gray</h1 ><p class="txtdasimg3">followed you </p>  <button class="laranja2"></button>
+    <p class="minute2">5m ago</p>
+</div>
+<div class="imagens1"> <img class="imgdoedu" src="avatar-jacob-thompson.webp" alt=""><h1 class="titulodasimagens">Jacob Thompson</h1>
+<p class="txtdasimg1">followed you </p>
+<button class="laranja3"></button>
+<p class="minute">20m ago</p>
+</div>
+<div class="imagens2"> <img class="imgdoedu" src="avatar-rizky-hasanuddin.webp" alt=""><h1 class="titulodasimagens5">Rizky Hasanuddin</h1>
+    <p class="txtdasimg9">sent you a private message</p>
+    <p class="minute1">5d ago</p>
+</div>
+<div class="privatem">Hello, thanks for setting up the Chess Club. i've been a member for a few weeks now and i'm already having lots of fun and improving my game.</div>
+</div>
+<div class="imagens3"> <img class="imgdoedu" src="avatar-kimberly-smith.webp" alt=""> <h1 class="titulodasimagens4">Kimberly Smith</h1> <p class="txtdasimg10">commented on your picture</p> <p class="minute4">1 week ago</p> <img class="picshare" src="image-chess.webp" alt=""> </div>
+ 
+<div class="imagens3"><img class="imgdoedu" src="avatar-nathan-peterson.webp" alt=""><h1 class="titulodasimagens">Nathan Peterson</h1> <p class="txtdasimg">reacted to your recent post <b class="b2"> 5 end-game strategies to <br> increase your win rate </p> <p class="minute7">2 weeks ago</p></b></p></div>
 </body>
 </html>
